--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </div>
     <div class="jumbotron jumbotron-fluid locate mt-5">
-      <div class="container m-4 fill">
+      <div class="container fill">
         <h1 class="display-4">Store Locator</h1>
         <p class="lead">Click <a href='#' class='play'><span class="here">here</span></a> to find a retail store near you</p>
        </div>
